apps/leaven/junharry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: junharry
  namespace: leaven
  labels:
    app: junharry
spec:
  selector:
    matchLabels:
      app: junharry
  template:
    metadata:
      labels:
        app: junharry
    spec:
      containers:
      - name: junharry
        image: hyeonwoo5342/junharry:56
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '20Mi'
            cpu: '10m'
          requests:
            memory: '20Mi'
            cpu: '10m'
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
