apps/leaven/junharry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junharry
  namespace: leaven
  labels:
    app: junharry
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: junharry
