apps/leaven/junharry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junharry-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: junharry.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: junharry
            port:
              number: 80
